<resources>
    <string name="app_name">News App</string>
    <string name="sources">Sources</string>
    <string name="all_news">All News</string>
    <string name="no_content_available">No Content available</string>
    <string name="source">Source: </string>
    <string name="author">"Author: "</string>
    <string name="desc">Description: </string>
    <string name="content">"Content: "</string>
    <string name="url">"URL: "</string>
    <string name="na">NA</string>
    <string name="red_txt">RED</string>
    <string name="orange_txt">ORANGE</string>
    <string name="yellow_txt">YELLOW</string>
    <string name="green_txt">GREEN</string>
    <string name="blue_txt">BLUE</string>
    <string name="indigo_txt">INDIGO</string>
    <string name="violet_txt">VIOLET</string>
</resources>