<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black">

    <TextView
        android:id="@+id/redBox"
        style="@style/textStyle"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@android:color/holo_red_dark"
        android:gravity="center"
        android:text="@string/red_txt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/orangeBox"
        style="@style/textStyle"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:background="@android:color/holo_orange_dark"
        android:gravity="center"
        android:text="@string/orange_txt"
        app:layout_constraintEnd_toEndOf="@+id/yellowBox"
        app:layout_constraintStart_toEndtOf="@id/redBox"
        app:layout_constraintStart_toStartOf="@+id/redBox"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/yellowBox"
        style="@style/textStyle"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:background="@color/yellowColor"
        android:gravity="center"
        android:text="@string/yellow_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/greenBox"
        style="@style/textStyle"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:background="@android:color/holo_green_dark"
        android:gravity="center"
        android:text="@string/green_txt"
        android:layout_marginRight="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/indigoBox"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/indigoBox"
        style="@style/textStyle"
        android:layout_width="160dp"
        android:layout_height="100dp"
        android:background="@color/indigoColor"
        android:gravity="center"
        android:text="@string/indigo_txt"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/greenBox"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/violetBox"
        style="@style/textStyle"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/violetColor"
        android:gravity="center"
        android:text="@string/violet_txt"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>